demos/traffic-mngmt/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: custom-metadata-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: proxy  # apply to all sidecars
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: istio.stats  # or istio.metadata_exchange
      patch:
        operation: MERGE
        value:
          config:
            metadataExchange:
              requestHeaders:
                - app.kubernetes.io/name
